--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://rojerthat07.github.io/Movie-Database-Site-with-React-JS",
   "name": "moviesitereactjs",
   "version": "0.1.0",
   "private": true,
@@ -13,10 +14,13 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": "react-app"
